<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.fitframework</groupId>
    <artifactId>fitframework-parent</artifactId>
    <version>3.5.2</version>
    <packaging>pom</packaging>

    <name>FIT Framework Parent</name>
    <description>FIT Framework is a lightweight, plugin-based Java framework designed for building modular and
        extensible applications. It provides a robust plugin architecture that enables seamless integration and
        management of components.
    </description>
    <url>https://github.com/ModelEngine-Group/fit-framework</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Ji Yujie</name>
            <email>codecaster365@outlook.com</email>
            <roles>
                <role>Maintainer</role>
            </roles>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/ModelEngine-Group/fit-framework.git</connection>
        <developerConnection>scm:git:ssh://github.com/ModelEngine-Group/fit-framework.git</developerConnection>
        <url>https://github.com/ModelEngine-Group/fit-framework</url>
    </scm>

    <modules>
        <module>fit-aop</module>
        <module>fit-api</module>
        <module>fit-broker</module>
        <module>fit-builtin</module>
        <module>fit-conf</module>
        <module>fit-extension</module>
        <module>fit-reactor</module>
        <module>fit-ioc</module>
        <module>fit-launcher</module>
        <module>fit-log</module>
        <module>fit-maven-plugin</module>
        <module>fit-plugin</module>
        <module>fit-protocol-nestable-jar</module>
        <module>fit-runtime</module>
        <module>fit-starters</module>
        <module>fit-test</module>
        <module>fit-util</module>
        <module>integration</module>
        <module>jacoco-aggregator</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>17</java.version>

        <!-- FIT version -->
        <fit.version>3.5.2</fit.version>

        <!-- Maven plugin versions -->
        <maven.antrun.version>3.1.0</maven.antrun.version>
        <maven.compiler.version>3.14.0</maven.compiler.version>
        <maven.dependency.version>3.8.1</maven.dependency.version>
        <maven.gpg.version>3.2.7</maven.gpg.version>
        <maven.jar.version>3.4.2</maven.jar.version>
        <maven.javadoc.version>3.11.2</maven.javadoc.version>
        <maven.surefire.version>3.5.3</maven.surefire.version>
        <maven.source.version>3.3.1</maven.source.version>
        <central-publishing.maven-plugin.version>0.7.0</central-publishing.maven-plugin.version>
        <jacoco.maven-plugin.version>0.8.13</jacoco.maven-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.fitframework</groupId>
                <artifactId>fit-dependency</artifactId>
                <version>${fit.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.fitframework</groupId>
                    <artifactId>fit-build-maven-plugin</artifactId>
                    <version>${fit.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.fitframework</groupId>
                    <artifactId>fit-dependency-maven-plugin</artifactId>
                    <version>${fit.version}</version>
                    <executions>
                        <execution>
                            <id>dependency</id>
                            <phase>compile</phase>
                            <goals>
                                <goal>dependency</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>${maven.antrun.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>${maven.dependency.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven.jar.version}</version>
                    <configuration>
                        <archive>
                            <manifestEntries>
                                <Created-By>FIT Lab</Created-By>
                            </manifestEntries>
                        </archive>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>${maven.gpg.version}</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven.javadoc.version}</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven.source.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.version}</version>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>jacoco-initialize</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <propertyName>argLine</propertyName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>${central-publishing.maven-plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
